# thread-safe-pointer

./: CMakeLists.txt
src/: CMakeLists.txt  ThreadSafe.h  lib.h  main.cpp
tests/: CMakeLists.txt  MockType.hh  ThreadSafe_unittest.cc
tests/integration/: CMakeLists.txt  ThreadSafe.cc
tests/unit/: CMakeLists.txt  ThreadSafe.cc
